--- a/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -185,7 +185,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/BluePrints/Interaction
+ContentBrowserDrawer.SelectedPaths=/Game/BluePrints/InteractableObjects
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -350,11 +350,16 @@ ChildActorComponent="\"Object\" "
 AnimGraphNode_StateResult="\"Object\" "
 SphereComponent="\"Object\" "
 K2Node_InputKey="\"Object\" "
+SoundWave="\"Object\" "
+SoundBase="\"Object\" "
+SoundAttenuation="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
@@ -382,10 +387,10 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 OpenAssetsAtExit=/Game/BluePrints/Interaction/TapePlayer.TapePlayer
+OpenAssetsAtExit=/Game/BluePrints/Interaction/mixkit-gentle-sea-wave-1204.mixkit-gentle-sea-wave-1204
+OpenAssetsAtExit=/Game/BluePrints/Interaction/wave.wave
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -1330,6 +1335,27 @@ K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
 TapePlayer_C.TransformCommon=True
 TapePlayer_C.Networking=True
+SoundWave.Format=True
+SoundWave.Sound=True
+SoundWave.Analysis=True
+SoundWave.Loading=True
+SoundWave.Subtitles=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Developer=True
+SoundWave.Voice Management=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
+SoundAttenuation.AttenuationDistance=True
+SoundAttenuation.AttenuationSpatialization=True
+SoundAttenuation.AttenuationAirAbsorption=True
+SoundAttenuation.AttenuationListenerFocus=True
+SoundAttenuation.AttenuationReverbSend=True
+SoundAttenuation.AttenuationOcclusion=True
+SoundAttenuation.AttenuationPriority=True
+SoundAttenuation.AttenuationSubmixSend=True
+SoundAttenuation.AttenuationSourceDataOverride=True
+SoundAttenuation.AttenuationAudioLink=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1483,7 +1509,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 
 [RootWindow]
 ScreenPosition=X=124.000 Y=44.000
-WindowSize=X=1283.200 Y=723.200
+WindowSize=X=1284.800 Y=724.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2591,36 +2617,36 @@ MRUItem0=/Game/Maps/Level1
 MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BluePrints/Interaction/TapePlayer
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem2=/Game/Maps/Level1
-MRUItem3=/Game/3D_Assets/Demon/Demon_Anim_Blueprint
-MRUItem4=/Game/3D_Assets/Demon/demon_with_heart_+_bones2_Anim_Root_attack
-MRUItem5=/Game/BluePrints/BP_EnemyAI
-MRUItem6=/Game/BluePrints/Interaction/BP_DestroyActor
-MRUItem7=/Game/3D_Assets/Demon/Demon_Blend
-MRUItem8=/Game/3D_Assets/Demon/demon_with_heart_+_bones2_PhysicsAsset
-MRUItem9=/Game/BluePrints/MirrorSpawnSystem/Mirror
-MRUItem10=/Game/3D_Assets/Demon/demon_with_heart_+_bones2_Anim_Root_Idle_animation
-MRUItem11=/Game/3D_Assets/Demon/demon_with_heart_+_bones2_Anim_Root_chase_animation
-MRUItem12=/Game/BluePrints/AI_Enemy
-MRUItem13=/Game/BluePrints/MirrorSpawnSystem/target
-MRUItem14=/Game/BluePrints/MirrorSpawnSystem/MirrorManager
-MRUItem15=/Game/BluePrints/MirrorSpawnSystem/EnemySample
-MRUItem16=/Game/3D_Assets/Demon/demon_with_heart_+_bones2
-MRUItem17=/Game/UI/WBP_HUD
-MRUItem18=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
-MRUItem19=/Game/BluePrints/Interaction/BP_InteractActor
-MRUItem20=/Game/BluePrints/Interaction/BPI_Interact
-MRUItem21=/Game/3D_Assets/nail/Material_001
-MRUItem22=/Engine/Maps/Templates/Thumbnails/TimeOfDay
-MRUItem23=/Game/3D_Assets/Railing/Material_001
-MRUItem24=/Game/3D_Assets/Textures/Main_Floor/HardwoodTex2_Mat
-MRUItem25=/Game/3D_Assets/Textures/Main_Floor/ceiling_Mat
-MRUItem26=/Game/3D_Assets/Textures/Basement/longWall
-MRUItem27=/Game/3D_Assets/Textures/Main_Floor/MainFloorCeiling_Mat
-MRUItem28=/Game/3D_Assets/Textures/Main_Floor/ceilingMainFloor
-MRUItem29=/Game/3D_Assets/Textures/Basement/longlonglongwall
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/BluePrints/Interaction/wave
+MRUItem2=/Game/BluePrints/Interaction/mixkit-gentle-sea-wave-1204
+MRUItem3=/Game/BluePrints/Interaction/TapePlayer
+MRUItem4=/Game/Maps/Level1
+MRUItem5=/Game/3D_Assets/Demon/Demon_Anim_Blueprint
+MRUItem6=/Game/3D_Assets/Demon/demon_with_heart_+_bones2_Anim_Root_attack
+MRUItem7=/Game/BluePrints/BP_EnemyAI
+MRUItem8=/Game/BluePrints/Interaction/BP_DestroyActor
+MRUItem9=/Game/3D_Assets/Demon/Demon_Blend
+MRUItem10=/Game/3D_Assets/Demon/demon_with_heart_+_bones2_PhysicsAsset
+MRUItem11=/Game/BluePrints/MirrorSpawnSystem/Mirror
+MRUItem12=/Game/3D_Assets/Demon/demon_with_heart_+_bones2_Anim_Root_Idle_animation
+MRUItem13=/Game/3D_Assets/Demon/demon_with_heart_+_bones2_Anim_Root_chase_animation
+MRUItem14=/Game/BluePrints/AI_Enemy
+MRUItem15=/Game/BluePrints/MirrorSpawnSystem/target
+MRUItem16=/Game/BluePrints/MirrorSpawnSystem/MirrorManager
+MRUItem17=/Game/BluePrints/MirrorSpawnSystem/EnemySample
+MRUItem18=/Game/3D_Assets/Demon/demon_with_heart_+_bones2
+MRUItem19=/Game/UI/WBP_HUD
+MRUItem20=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
+MRUItem21=/Game/BluePrints/Interaction/BP_InteractActor
+MRUItem22=/Game/BluePrints/Interaction/BPI_Interact
+MRUItem23=/Game/3D_Assets/nail/Material_001
+MRUItem24=/Engine/Maps/Templates/Thumbnails/TimeOfDay
+MRUItem25=/Game/3D_Assets/Railing/Material_001
+MRUItem26=/Game/3D_Assets/Textures/Main_Floor/HardwoodTex2_Mat
+MRUItem27=/Game/3D_Assets/Textures/Main_Floor/ceiling_Mat
+MRUItem28=/Game/3D_Assets/Textures/Basement/longWall
+MRUItem29=/Game/3D_Assets/Textures/Main_Floor/MainFloorCeiling_Mat
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -2656,6 +2682,8 @@ LastLogListing=PIE
 /Game/3D_Assets/Demon/Demon_Anim_Blueprint.Demon_Anim_Blueprint=1
 /Game/Maps/Level1.Level1:PersistentLevel.Level1=1
 /Game/BluePrints/Interaction/TapePlayer.TapePlayer=0
+/Game/BluePrints/Interaction/mixkit-gentle-sea-wave-1204.mixkit-gentle-sea-wave-1204=1
+/Game/BluePrints/Interaction/wave.wave=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
