--- a/gdwGameYear3 5.3 - 2 5.3 5.3/Config/DefaultEngine.ini
+++ b/gdwGameYear3 5.3 - 2 5.3 5.3/Config/DefaultEngine.ini
@@ -30,6 +30,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.AllowGlobalClipPlane=True
+r.CustomDepth=0
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -61,4 +62,14 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/Engine.PhysicsSettings]
+bSuppressFaceRemapTable=True
+bSupportUVFromHitResults=True
+bDisableActiveActors=True
+bDisableKinematicStaticPairs=True
+bDisableKinematicKinematicPairs=True
+bTickPhysicsAsync=False
+bSubsteppingAsync=False
+bSubstepping=False
 
