--- a/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -740,9 +740,6 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
-OpenAssetsAtExit=/Game/3D_Assets/Rugs/Material_001.Material_001
-OpenAssetsAtExit=/Game/3D_Assets/Rugs/rug2.rug2
-OpenAssetsAtExit=/Game/3D_Assets/ComfyChair/Chair.Chair
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -2118,6 +2115,8 @@ TextureImportSettings.VirtualTextures=True
 TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
