--- a/gdwGameYear3 5.3 - 2 5.3 5.3/Config/DefaultEngine.ini
+++ b/gdwGameYear3 5.3 - 2 5.3 5.3/Config/DefaultEngine.ini
@@ -30,7 +30,8 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.AllowGlobalClipPlane=True
-r.CustomDepth=0
+r.CustomDepth=3
+r.CustomDepthTemporalAAJitter=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
