script addition, fixed items clipping thru floor

--- a/gdwGameYear3 5.3 - 2 5.3/gdwGameYear3.uproject
+++ b/gdwGameYear3 5.3 - 2 5.3/gdwGameYear3.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{6188301C-46EA-9894-0551-CCA9B9083F4B}",
+	"EngineAssociation": "5.3",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
