--- a/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -168,7 +168,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 InputMappingContext=InputMappingContext.Mappings.ActionMappings
 InputAction=
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.Axis Settings.Horizontal Axis
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis
 PersonaPreviewSceneDescription=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Lens
@@ -293,7 +293,7 @@ BrushComponent=PostProcessVolume.Rendering Features.Rendering Features
 StaticMeshActor=PostProcessVolume.Rendering Features.Rendering Features,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform
 PlanarReflectionComponent=PostProcessVolume.Rendering Features.Rendering Features,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform
 PlanarReflection=PostProcessVolume.Rendering Features.Rendering Features,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform
-SceneComponent=
+SceneComponent=PostProcessVolume.Rendering Features.Rendering Features,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features
 MirrorTesting_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features
 PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features
@@ -311,6 +311,9 @@ SkeletalMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCom
 K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features
 K2Node_Variable=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features
 BP_EnemyAI_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features
+CapsuleComponent=
+PlayerState=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features
+PlayerStart=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -335,7 +338,7 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/3D_Assets/InvestigatorFriend
+ContentBrowserTab1.SelectedPaths=/Game/UI/Scripts
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -406,7 +409,7 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Level1
+LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -771,8 +774,8 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2918,6 +2921,20 @@ FirstPerson_AnimBP_C.Montage=True
 ChildActorComponent.Sockets=True
 ChildActorComponent.ComponentTick=True
 ChildActorComponent.Events=True
+PlayerStartPIE.TransformCommon=True
+PlayerStartPIE.Object=True
+PlayerStartPIE.Rendering=True
+PlayerStartPIE.Replication=True
+PlayerStartPIE.HLOD=True
+PlayerStartPIE.Physics=True
+PlayerStartPIE.Networking=True
+PlayerStartPIE.WorldPartition=True
+PlayerStartPIE.Input=True
+PlayerStartPIE.Actor=True
+PlayerState.Replication=True
+PlayerState.Physics=True
+PlayerState.Networking=True
+PlayerState.Actor=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -4224,11 +4241,11 @@ OpusDecoderElectra.LastCompileMethod=External
 
 [Python]
 LastDirectory=
+RecentsFiles=D:/Fortnite/Engine/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=Z:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/EpicGames/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Unreal engine/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=D:/Fortnite/Engine/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
 MRUItem0=/Game/Maps/Level1
@@ -4237,11 +4254,11 @@ MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/BluePrints/MirrorSpawnSystem/MirrorManager
 MRUItem1=/Game/BluePrints/MirrorSpawnSystem/Mirror
-MRUItem2=/Game/BluePrints/BP_EnemyAI
-MRUItem3=/Game/BluePrints/InteractableObjects/MirrorTesting
-MRUItem4=/Game/FirstPersonArms/Animations/FirstPerson_AnimBP
-MRUItem5=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem6=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem2=/Game/BluePrints/InteractableObjects/MirrorTesting
+MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem4=/Game/BluePrints/BP_EnemyAI
+MRUItem5=/Game/FirstPersonArms/Animations/FirstPerson_AnimBP
+MRUItem6=/Game/FirstPerson/Blueprints/BP_Weapon_Component
 MRUItem7=/Game/BluePrints/Interaction/BP_DestroyActor
 MRUItem8=/Game/BluePrints/AI_Enemy
 MRUItem9=/Game/BluePrints/MirrorSpawnSystem/EnemySample
