--- a/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -352,7 +352,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.750475168
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/EngineData
+ContentBrowserDrawer.SelectedPaths=/Game/Person
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -491,7 +491,7 @@ PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 AssetViewerSettings="\"Object\" \"Object.Settings.Profiles.Profiles[0].PostProcessingSettings\" "
 AnimSequence="\"Object\" \"Object.Animation.PlatformTargetFrameRate\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 AnimSequenceBase="\"Object\" \"Object.Animation.PlatformTargetFrameRate\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-AnimationAsset="\"Object\" \"Object.Animation.PlatformTargetFrameRate\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+AnimationAsset="\"Object\" "
 SkeletalMesh="\"Object\" "
 SkinnedAsset="\"Object\" "
 LODInfoUILayout="\"Object\" "
@@ -828,6 +828,8 @@ DecalComponent="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -856,9 +858,6 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=MediaSourceEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=WidgetBlueprintEditor
-OpenAssetsAtExit=/Game/3D_Assets/Note/Note.Note
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -4466,11 +4465,11 @@ OpusDecoderElectra.LastCompileMethod=External
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Unreal engine/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/EpicGames/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=Z:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Fortnite/Engine/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Unreal engine/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
 MRUItem0=/Game/FirstPerson/Maps/FirstPersonMap
@@ -4478,36 +4477,36 @@ MRUItem1=/Game/Maps/Level1
 MRUItem2=/Game/Maps/Cinematic
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/3D_Assets/Note/Note
-MRUItem1=/Game/BluePrints/BP_EnemyAI
-MRUItem2=/Game/BluePrints/AI_Enemy
-MRUItem3=/Game/BluePrints/Interaction/Note_Pickup
-MRUItem4=/Game/BluePrints/Interaction/BP_InteractActor
-MRUItem5=/Game/UI/Scripts/Note_UI/1Note_Menu
-MRUItem6=/Game/UI/Scripts/Script1
-MRUItem7=/Game/BluePrints/MirrorSpawnSystem/MirrorManager
-MRUItem8=/Game/BluePrints/MirrorSpawnSystem/Mirror
-MRUItem9=/Game/BluePrints/Interaction/Wardrobe
-MRUItem10=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem11=/Game/BluePrints/InteractableObjects/BP_Object_DONT_ALTER
-MRUItem12=/Game/BluePrints/InteractableObjects/BP_BottomFridgeDoor1
-MRUItem13=/Game/BluePrints/Interaction/BP_DoorSwitch
-MRUItem14=/Game/BluePrints/Interaction/BP_DestroyActor
-MRUItem15=/Game/BluePrints/Interaction/BPI_Interact
-MRUItem16=/Game/BluePrints/Interact_Interface
-MRUItem17=/Game/UI/Scripts/Note_UI/4Note_Menu
-MRUItem18=/Game/UI/Scripts/Note_UI/3Note_Menu
-MRUItem19=/Game/UI/Scripts/Note_UI/5Note_Menu
-MRUItem20=/Game/UI/Scripts/Note_UI/6Note_Menu
-MRUItem21=/Game/UI/Scripts/Note_UI/2Note_Menu
-MRUItem22=/Game/UI/Scripts/Note_UI/7Note_Menu
-MRUItem23=/Game/UI/WBP_HUD
-MRUItem24=/Game/UI_Assets/Stamina
-MRUItem25=/Game/UI/WBP_Interact
-MRUItem26=/Game/Person/Character_Anim
-MRUItem27=/Game/UI_Assets/Background/purple
-MRUItem28=/Game/UI_Menu/WB_MainMenu
-MRUItem29=/Game/UI_Assets/MenuVideo_Inst
+MRUItem0=/Game/Person/lowwalk/New_Walking
+MRUItem1=/Game/Person/Walking_anims
+MRUItem2=/Game/3D_Assets/Note/Note
+MRUItem3=/Game/BluePrints/BP_EnemyAI
+MRUItem4=/Game/BluePrints/AI_Enemy
+MRUItem5=/Game/BluePrints/Interaction/Note_Pickup
+MRUItem6=/Game/BluePrints/Interaction/BP_InteractActor
+MRUItem7=/Game/UI/Scripts/Note_UI/1Note_Menu
+MRUItem8=/Game/UI/Scripts/Script1
+MRUItem9=/Game/BluePrints/MirrorSpawnSystem/MirrorManager
+MRUItem10=/Game/BluePrints/MirrorSpawnSystem/Mirror
+MRUItem11=/Game/BluePrints/Interaction/Wardrobe
+MRUItem12=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem13=/Game/BluePrints/InteractableObjects/BP_Object_DONT_ALTER
+MRUItem14=/Game/BluePrints/InteractableObjects/BP_BottomFridgeDoor1
+MRUItem15=/Game/BluePrints/Interaction/BP_DoorSwitch
+MRUItem16=/Game/BluePrints/Interaction/BP_DestroyActor
+MRUItem17=/Game/BluePrints/Interaction/BPI_Interact
+MRUItem18=/Game/BluePrints/Interact_Interface
+MRUItem19=/Game/UI/Scripts/Note_UI/4Note_Menu
+MRUItem20=/Game/UI/Scripts/Note_UI/3Note_Menu
+MRUItem21=/Game/UI/Scripts/Note_UI/5Note_Menu
+MRUItem22=/Game/UI/Scripts/Note_UI/6Note_Menu
+MRUItem23=/Game/UI/Scripts/Note_UI/2Note_Menu
+MRUItem24=/Game/UI/Scripts/Note_UI/7Note_Menu
+MRUItem25=/Game/UI/WBP_HUD
+MRUItem26=/Game/UI_Assets/Stamina
+MRUItem27=/Game/UI/WBP_Interact
+MRUItem28=/Game/Person/Character_Anim
+MRUItem29=/Game/UI_Assets/Background/purple
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
