--- a/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=980)
+LastSize=(X=1914,Y=990)
 LastExecutedLaunchDevice=Windows@MSI
 LastExecutedLaunchName=Windows@MSI
 LastExecutedPIEPreviewDevice=
@@ -132,8 +132,8 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=1914
-NewWindowHeight=980
-LastExecutedPlayModeType=PlayMode_InEditorFloating
+NewWindowHeight=990
+LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -306,8 +306,8 @@ Actor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Transform
 K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Lens.Lens
 BillboardComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Lens.Lens
 K2Node_MacroInstance=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features
-BP_FirstPersonCharacter_C=
-SkeletalMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Lens.Lens
+BP_FirstPersonCharacter_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Lens.Lens
+SkeletalMeshComponent=
 K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Lens.Lens
 K2Node_Variable=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Lens.Lens
 BP_EnemyAI_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Lens.Lens
@@ -362,7 +362,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.750475168
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/BluePrints
+ContentBrowserDrawer.SelectedPaths=/Game/Person/lowwalk
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -848,10 +848,25 @@ LightComponentBase="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SoundCueEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MediaPlayerEditor
 RecentAssetEditors=MediaSourceEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -863,31 +878,7 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=PhysicsAssetEditor
-RecentAssetEditors=
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=PhysicsAssetEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=TextureEditor
-OpenAssetsAtExit=/Game/Sound/rain__1_.rain__1_
-OpenAssetsAtExit=/Game/Materials/RimLighting/Outline.Outline
-OpenAssetsAtExit=/Game/Materials/RimLighting/Outline_Inst.Outline_Inst
-OpenAssetsAtExit=/Game/BluePrints/Interaction/BP_DestroyActor.BP_DestroyActor
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/BluePrints/LightInterface.LightInterface
-OpenAssetsAtExit=/Game/BluePrints/Light_BP.Light_BP
-OpenAssetsAtExit=/Game/BluePrints/BP_EnemyAI.BP_EnemyAI
-OpenAssetsAtExit=/Game/UI_Menu/MenuMoving.MenuMoving
-OpenAssetsAtExit=/Game/UI/WBP_HUD.WBP_HUD
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -3393,7 +3384,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 
 [RootWindow]
 ScreenPosition=X=124.000 Y=44.000
-WindowSize=X=1300.000 Y=740.000
+WindowSize=X=1301.600 Y=741.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -4484,8 +4475,8 @@ SkeletonEditor.TimeStamp=2023.11.09-16.17.51
 SkeletonEditor.LastCompileMethod=External
 PinnedCommandList.TimeStamp=2023.11.09-16.17.49
 PinnedCommandList.LastCompileMethod=External
-AnimationEditor.TimeStamp=2023.10.27-20.50.33
-AnimationEditor.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2023.11.09-07.25.30
+AnimationEditor.LastCompileMethod=External
 NewLevelDialog.TimeStamp=2023.11.09-16.17.49
 NewLevelDialog.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2023.11.09-16.17.48
@@ -4545,36 +4536,36 @@ MRUItem1=/Game/Maps/Level1
 MRUItem2=/Game/Maps/Cinematic
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/WBP_HUD
-MRUItem1=/Game/UI_Menu/MenuMoving
-MRUItem2=/Game/UI_Menu/menumoving1
-MRUItem3=/Game/BluePrints/BP_EnemyAI
-MRUItem4=/Game/BluePrints/LightInterface
-MRUItem5=/Game/BluePrints/Light_BP
-MRUItem6=/Game/BluePrints/Interaction/Note_Pickup
-MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem8=/Game/Materials/RimLighting/Outline_Inst
-MRUItem9=/Game/BluePrints/Interaction/BP_DestroyActor
-MRUItem10=/Game/Materials/RimLighting/Outline
-MRUItem11=/Game/Sound/rain__1_
-MRUItem12=/Game/BluePrints/MirrorSpawnSystem/Mirror
-MRUItem13=/Game/Maps/Level1
-MRUItem14=/Game/Person/lowwalk/Final_Anim
-MRUItem15=/Game/Person/lowwalk/RetryPersonMar25_Anim_root_CrouchUp
-MRUItem16=/Game/Person/lowwalk/RetryPersonMar25_Anim_root_CrouchDown
-MRUItem17=/Game/UI/WBP_DoorLocked
-MRUItem18=/Game/Person/lowwalk/Crouch_Walk_Blend
-MRUItem19=/Game/Person/lowwalk/RetryPersonMar25_PhysicsAsset
-MRUItem20=/Game/Person/Character_Anim
-MRUItem21=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem22=/Game/Person/TESTINGBOI_Skeleton
-MRUItem23=/Game/Person/TESTINGBOI
-MRUItem24=/Game/Person/TESTINGBOI_PhysicsAsset
-MRUItem25=/Game/Person/Walking_anims
-MRUItem26=/Game/Person/lowwalk/New_Walking
-MRUItem27=/Game/3D_Assets/Note/Note
-MRUItem28=/Game/BluePrints/AI_Enemy
-MRUItem29=/Game/BluePrints/Interaction/BP_InteractActor
+MRUItem0=/Game/Person/lowwalk/RetryPersonMar25_Anim_root_WalkBackLow
+MRUItem1=/Game/Person/lowwalk/RetryPersonMar25_Anim_root_WalkL
+MRUItem2=/Game/Person/lowwalk/RetryPersonMar25_Anim_root_WalkFrontR
+MRUItem3=/Game/Person/lowwalk/RetryPersonMar25_Anim_root_WalkBackR
+MRUItem4=/Game/Person/lowwalk/RetryPersonMar25_Anim_root_WalkBackL
+MRUItem5=/Game/Person/lowwalk/RetryPersonMar25_Anim_root_WalkBack
+MRUItem6=/Game/Person/lowwalk/RetryPersonMar25_Anim_root_WalkFront
+MRUItem7=/Game/Person/TESTINGBOI_Anim_BODYbONES_WalkFront
+MRUItem8=/Game/Person/TESTINGBOI_Anim_BODYbONES_WalkBack
+MRUItem9=/Game/Person/TESTINGBOI_Anim_BODYbONES_WalkBackL
+MRUItem10=/Game/Person/TESTINGBOI_Anim_BODYbONES_WalkBackR
+MRUItem11=/Game/Person/lowwalk/RetryPersonMar25_Anim_root_idle
+MRUItem12=/Game/Person/TESTINGBOI_Anim_BODYbONES_WalkFrontL
+MRUItem13=/Game/Sound/ambience
+MRUItem14=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem15=/Game/Sound/sound_assets/Walking_Cue
+MRUItem16=/Game/UI/WBP_HUD
+MRUItem17=/Game/UI_Menu/MenuMoving
+MRUItem18=/Game/UI_Menu/menumoving1
+MRUItem19=/Game/BluePrints/BP_EnemyAI
+MRUItem20=/Game/BluePrints/LightInterface
+MRUItem21=/Game/BluePrints/Light_BP
+MRUItem22=/Game/BluePrints/Interaction/Note_Pickup
+MRUItem23=/Game/Materials/RimLighting/Outline_Inst
+MRUItem24=/Game/BluePrints/Interaction/BP_DestroyActor
+MRUItem25=/Game/Materials/RimLighting/Outline
+MRUItem26=/Game/Sound/rain__1_
+MRUItem27=/Game/BluePrints/MirrorSpawnSystem/Mirror
+MRUItem28=/Game/Maps/Level1
+MRUItem29=/Game/Person/lowwalk/Final_Anim
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -4743,6 +4734,11 @@ LastLogListing=PIE
 /Game/Materials/RimLighting/Outline.Outline=1
 /Game/BluePrints/LightInterface.LightInterface=1
 /Game/BluePrints/Light_BP.Light_BP=1
+/Game/Sound/sound_assets/Walking_Cue.Walking_Cue=1
+/Game/Sound/ambience.ambience=1
+/Game/Person/TESTINGBOI_Anim_BODYbONES_WalkFrontL.TESTINGBOI_Anim_BODYbONES_WalkFrontL=1
+/Game/Person/lowwalk/RetryPersonMar25_Anim_root_WalkBackLow.RetryPersonMar25_Anim_root_WalkBackLow=1
+/Game/Person/TESTINGBOI_Anim_BODYbONES_WalkFront.TESTINGBOI_Anim_BODYbONES_WalkFront=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
