rim lighting 25% complete

--- a/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/Engine.ini
+++ b/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/Engine.ini
@@ -75,3 +75,11 @@ TunnelMulticastEndpoint=
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[Launcher.DeviceGroups]
+DeviceGroup=(Id="179CEDEA432B7092D178439C7F0F830C", Name="New Group 0", Devices="")
+DeviceGroup=(Id="5FE4E7AB48A0D20AF5A5A18352483272", Name="New Group 1", Devices="")
+DeviceGroup=(Id="30C7889D41CA0F07F58FDF891D01537C", Name="New Group 2", Devices="")
+
+[FProjectLauncher]
+AdvancedMode=False
+
