--- a/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=990)
+LastSize=(X=1914,Y=1040)
 LastExecutedLaunchDevice=Windows@MSI
 LastExecutedLaunchName=Windows@MSI
 LastExecutedPIEPreviewDevice=
@@ -132,7 +132,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=1914
-NewWindowHeight=990
+NewWindowHeight=1040
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -863,8 +863,8 @@ DebuggerAttached=False
 RecentAssetEditors=MediaPlayerEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MediaPlayerEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MediaPlayerEditor
 RecentAssetEditors=MediaPlayerEditor
 RecentAssetEditors=MediaSourceEditor
@@ -889,11 +889,10 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=GenericAssetEditor
-OpenAssetsAtExit=/Game/UI_Assets/Background/Menu_MediaPlayer.Menu_MediaPlayer
 OpenAssetsAtExit=/Game/UI_Menu/WB_MainMenu.WB_MainMenu
-OpenAssetsAtExit=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap:PersistentLevel.FirstPersonMap
 OpenAssetsAtExit=/Game/UI_Menu/MenuMoving_Video.MenuMoving_Video
 OpenAssetsAtExit=/Game/UI_Menu/MenuMoving.MenuMoving
+OpenAssetsAtExit=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap:PersistentLevel.FirstPersonMap
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -2280,6 +2279,7 @@ UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -3301,7 +3301,6 @@ ExponentialHeightFog.Cooking=True
 ExponentialHeightFog.Replication=True
 ExponentialHeightFog.Networking=True
 ExponentialHeightFog.Actor=True
-UMGEditorProjectSettings.Designer =True
 MediaPlayer.Editor=True
 
 [FBX_Import_UI_Option_FbxImportUI]
@@ -4627,10 +4626,10 @@ MRUItem2=/Game/Maps/Cinematic
 MRUItem0=/Game/UI_Menu/MenuMoving
 MRUItem1=/Game/UI_Menu/MenuMoving_Video
 MRUItem2=/Game/UI_Menu/WB_MainMenu
-MRUItem3=/Game/UI_Assets/Background/Menu_UI
-MRUItem4=/Game/UI_Assets/Background/Menu_MediaPlayer
-MRUItem5=/Game/Movies/opening_cine
-MRUItem6=/Game/UI_Menu/Final/menumoving
+MRUItem3=/Game/UI_Menu/Final/menumoving
+MRUItem4=/Game/UI_Assets/Background/Menu_UI
+MRUItem5=/Game/UI_Assets/Background/Menu_MediaPlayer
+MRUItem6=/Game/Movies/opening_cine
 MRUItem7=/Game/Movies/OpeningCine
 MRUItem8=/Game/UI_Assets/Background/purpBackground
 MRUItem9=/Game/UI_Menu/Final/menumoving_Video
@@ -4701,7 +4700,7 @@ LastLogListing=PIE
 /Game/Person/TESTINGBOI_PhysicsAsset.TESTINGBOI_PhysicsAsset=1
 /Game/Person/Character_Anim.Character_Anim=1
 /Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController.BP_FirstPersonPlayerController=0
-/Game/UI_Menu/MenuMoving.MenuMoving=0
+/Game/UI_Menu/MenuMoving.MenuMoving=1
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode=0
 /Game/3D_Assets/Dumbbell/DB.DB=0
 /Game/3D_Assets/Dumbbell/Handle.Handle=0
@@ -4856,6 +4855,7 @@ LastLogListing=PIE
 /Game/UI_Assets/Menu1.Menu1=1
 /Game/Movies/OpeningCine.OpeningCine=1
 /Game/UI_Menu/Final/menumoving.menumoving=1
+/Game/Movies/purpleMenuPage.purpleMenuPage=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
