--- a/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -860,6 +860,7 @@ EdGraphNode_Comment="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MediaSourceEditor
 RecentAssetEditors=MediaPlayerEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -889,10 +890,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=GenericAssetEditor
-OpenAssetsAtExit=/Game/UI_Menu/WB_MainMenu.WB_MainMenu
-OpenAssetsAtExit=/Game/UI_Menu/MenuMoving_Video.MenuMoving_Video
-OpenAssetsAtExit=/Game/UI_Menu/MenuMoving.MenuMoving
-OpenAssetsAtExit=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap:PersistentLevel.FirstPersonMap
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -4623,35 +4620,36 @@ MRUItem1=/Game/Maps/Level1
 MRUItem2=/Game/Maps/Cinematic
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI_Menu/MenuMoving
-MRUItem1=/Game/UI_Menu/MenuMoving_Video
-MRUItem2=/Game/UI_Menu/WB_MainMenu
-MRUItem3=/Game/UI_Menu/Final/menumoving
-MRUItem4=/Game/UI_Assets/Background/Menu_UI
-MRUItem5=/Game/UI_Assets/Background/Menu_MediaPlayer
-MRUItem6=/Game/Movies/opening_cine
-MRUItem7=/Game/Movies/OpeningCine
-MRUItem8=/Game/UI_Assets/Background/purpBackground
-MRUItem9=/Game/UI_Menu/Final/menumoving_Video
-MRUItem10=/Game/UI_Menu/menumoving1
-MRUItem11=/Game/UI_Assets/Menu1
-MRUItem12=/Game/BluePrints/InteractableObjects/BP_Hammer
-MRUItem13=/Game/BluePrints/Interaction/Note_Pickup
-MRUItem14=/Game/Sound/sound_assets/glass_break_4
-MRUItem15=/Game/Sound/sound_assets/glass_break_3
-MRUItem16=/Game/Sound/sound_assets/glass_break_2
-MRUItem17=/Game/Sound/sound_assets/Glass_break_1
-MRUItem18=/Game/Sound/ghostScreamin
-MRUItem19=/Game/BluePrints/InteractableObjects/BP_Object_DONT_ALTER
-MRUItem20=/Game/BluePrints/Interaction/M_Interact
-MRUItem21=/Game/BluePrints/Interaction/BP_DestroyActor
-MRUItem22=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem23=/Game/BluePrints/InteractableObjects/MirrorTesting
-MRUItem24=/Game/BluePrints/Interaction/Wardrobe
-MRUItem25=/Game/BluePrints/AI_Enemy
-MRUItem26=/Game/BluePrints/MirrorSpawnSystem/Mirror
-MRUItem27=/Game/Maps/Level1
-MRUItem28=/Game/Sound/sound_assets/souls_screaming_echo
+MRUItem0=/Game/Movies/purpleMainScreenBackground
+MRUItem1=/Game/UI_Menu/MenuMoving
+MRUItem2=/Game/UI_Menu/MenuMoving_Video
+MRUItem3=/Game/UI_Menu/WB_MainMenu
+MRUItem4=/Game/UI_Menu/Final/menumoving
+MRUItem5=/Game/UI_Assets/Background/Menu_UI
+MRUItem6=/Game/UI_Assets/Background/Menu_MediaPlayer
+MRUItem7=/Game/Movies/opening_cine
+MRUItem8=/Game/Movies/OpeningCine
+MRUItem9=/Game/UI_Assets/Background/purpBackground
+MRUItem10=/Game/UI_Menu/Final/menumoving_Video
+MRUItem11=/Game/UI_Menu/menumoving1
+MRUItem12=/Game/UI_Assets/Menu1
+MRUItem13=/Game/BluePrints/InteractableObjects/BP_Hammer
+MRUItem14=/Game/BluePrints/Interaction/Note_Pickup
+MRUItem15=/Game/Sound/sound_assets/glass_break_4
+MRUItem16=/Game/Sound/sound_assets/glass_break_3
+MRUItem17=/Game/Sound/sound_assets/glass_break_2
+MRUItem18=/Game/Sound/sound_assets/Glass_break_1
+MRUItem19=/Game/Sound/ghostScreamin
+MRUItem20=/Game/BluePrints/InteractableObjects/BP_Object_DONT_ALTER
+MRUItem21=/Game/BluePrints/Interaction/M_Interact
+MRUItem22=/Game/BluePrints/Interaction/BP_DestroyActor
+MRUItem23=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem24=/Game/BluePrints/InteractableObjects/MirrorTesting
+MRUItem25=/Game/BluePrints/Interaction/Wardrobe
+MRUItem26=/Game/BluePrints/AI_Enemy
+MRUItem27=/Game/BluePrints/MirrorSpawnSystem/Mirror
+MRUItem28=/Game/Maps/Level1
+MRUItem29=/Game/Sound/sound_assets/souls_screaming_echo
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -4856,6 +4854,7 @@ LastLogListing=PIE
 /Game/Movies/OpeningCine.OpeningCine=1
 /Game/UI_Menu/Final/menumoving.menumoving=1
 /Game/Movies/purpleMenuPage.purpleMenuPage=1
+/Game/Movies/purpleMainScreenBackground.purpleMainScreenBackground=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
