please cinematic work

--- a/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -369,7 +369,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.750475168
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI_Menu
+ContentBrowserDrawer.SelectedPaths=/Game/Movies
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -379,7 +379,7 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/BluePrints/InteractableObjects
+ContentBrowserTab1.SelectedPaths=/Game/Movies
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -860,8 +860,11 @@ EdGraphNode_Comment="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=MediaSourceEditor
 RecentAssetEditors=MediaPlayerEditor
+RecentAssetEditors=MediaSourceEditor
+RecentAssetEditors=MediaSourceEditor
+RecentAssetEditors=MediaSourceEditor
+RecentAssetEditors=MediaSourceEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MediaPlayerEditor
@@ -887,9 +890,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=GenericAssetEditor
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -4620,36 +4620,36 @@ MRUItem1=/Game/Maps/Level1
 MRUItem2=/Game/Maps/Cinematic
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Movies/purpleMainScreenBackground
-MRUItem1=/Game/UI_Menu/MenuMoving
-MRUItem2=/Game/UI_Menu/MenuMoving_Video
-MRUItem3=/Game/UI_Menu/WB_MainMenu
-MRUItem4=/Game/UI_Menu/Final/menumoving
-MRUItem5=/Game/UI_Assets/Background/Menu_UI
-MRUItem6=/Game/UI_Assets/Background/Menu_MediaPlayer
-MRUItem7=/Game/Movies/opening_cine
-MRUItem8=/Game/Movies/OpeningCine
-MRUItem9=/Game/UI_Assets/Background/purpBackground
-MRUItem10=/Game/UI_Menu/Final/menumoving_Video
-MRUItem11=/Game/UI_Menu/menumoving1
-MRUItem12=/Game/UI_Assets/Menu1
-MRUItem13=/Game/BluePrints/InteractableObjects/BP_Hammer
-MRUItem14=/Game/BluePrints/Interaction/Note_Pickup
-MRUItem15=/Game/Sound/sound_assets/glass_break_4
-MRUItem16=/Game/Sound/sound_assets/glass_break_3
-MRUItem17=/Game/Sound/sound_assets/glass_break_2
-MRUItem18=/Game/Sound/sound_assets/Glass_break_1
-MRUItem19=/Game/Sound/ghostScreamin
-MRUItem20=/Game/BluePrints/InteractableObjects/BP_Object_DONT_ALTER
-MRUItem21=/Game/BluePrints/Interaction/M_Interact
-MRUItem22=/Game/BluePrints/Interaction/BP_DestroyActor
-MRUItem23=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem24=/Game/BluePrints/InteractableObjects/MirrorTesting
-MRUItem25=/Game/BluePrints/Interaction/Wardrobe
-MRUItem26=/Game/BluePrints/AI_Enemy
-MRUItem27=/Game/BluePrints/MirrorSpawnSystem/Mirror
-MRUItem28=/Game/Maps/Level1
-MRUItem29=/Game/Sound/sound_assets/souls_screaming_echo
+MRUItem0=/Game/UI_Menu/MenuMoving
+MRUItem1=/Game/Movies/purple1
+MRUItem2=/Game/UI_Menu/Final/opening_cine_Video
+MRUItem3=/Game/Movies/FinalTitleScreen
+MRUItem4=/Game/Movies/purpleMainScreenBackground
+MRUItem5=/Game/UI_Menu/MenuMoving_Video
+MRUItem6=/Game/UI_Menu/WB_MainMenu
+MRUItem7=/Game/UI_Menu/Final/menumoving
+MRUItem8=/Game/UI_Assets/Background/Menu_UI
+MRUItem9=/Game/UI_Assets/Background/Menu_MediaPlayer
+MRUItem10=/Game/Movies/opening_cine
+MRUItem11=/Game/Movies/OpeningCine
+MRUItem12=/Game/UI_Assets/Background/purpBackground
+MRUItem13=/Game/UI_Menu/Final/menumoving_Video
+MRUItem14=/Game/UI_Menu/menumoving1
+MRUItem15=/Game/UI_Assets/Menu1
+MRUItem16=/Game/BluePrints/InteractableObjects/BP_Hammer
+MRUItem17=/Game/BluePrints/Interaction/Note_Pickup
+MRUItem18=/Game/Sound/sound_assets/glass_break_4
+MRUItem19=/Game/Sound/sound_assets/glass_break_3
+MRUItem20=/Game/Sound/sound_assets/glass_break_2
+MRUItem21=/Game/Sound/sound_assets/Glass_break_1
+MRUItem22=/Game/Sound/ghostScreamin
+MRUItem23=/Game/BluePrints/InteractableObjects/BP_Object_DONT_ALTER
+MRUItem24=/Game/BluePrints/Interaction/M_Interact
+MRUItem25=/Game/BluePrints/Interaction/BP_DestroyActor
+MRUItem26=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem27=/Game/BluePrints/InteractableObjects/MirrorTesting
+MRUItem28=/Game/BluePrints/Interaction/Wardrobe
+MRUItem29=/Game/BluePrints/AI_Enemy
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -4855,6 +4855,9 @@ LastLogListing=PIE
 /Game/UI_Menu/Final/menumoving.menumoving=1
 /Game/Movies/purpleMenuPage.purpleMenuPage=1
 /Game/Movies/purpleMainScreenBackground.purpleMainScreenBackground=1
+/Game/Movies/FinalTitleScreen.FinalTitleScreen=1
+/Game/UI_Menu/Final/opening_cine_Video.opening_cine_Video=1
+/Game/Movies/purple1.purple1=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
