--- a/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=980)
+LastSize=(X=1914,Y=1040)
 LastExecutedLaunchDevice=Windows@MSI
 LastExecutedLaunchName=Windows@MSI
 LastExecutedPIEPreviewDevice=
@@ -132,7 +132,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=1914
-NewWindowHeight=980
+NewWindowHeight=1040
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -170,7 +170,7 @@ SnapScaleEnabled=False
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 InputMappingContext=InputMappingContext.Mappings.ActionMappings
 InputAction=
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.Axis Settings.Horizontal Axis
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis
 PersonaPreviewSceneDescription=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Lens
@@ -377,7 +377,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.750475168
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/3D_Assets/Candle
+ContentBrowserDrawer.SelectedPaths=/Game/Movies
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -458,7 +458,7 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Level1
+LastLevel=/Game/Maps/EndingCinematic
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -503,14 +503,14 @@ Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 HorizontalBox="\"Object\" "
 PanelWidget="\"Object\" "
-Widget="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
-Visual="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 CanvasPanel="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 WBP_HUD_C="\"Object\" "
-UserWidget="\"Object\" "
+UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 AssetViewerSettings="\"Object\" \"Object.Settings.Profiles.Profiles[0].PostProcessingSettings\" "
@@ -864,13 +864,20 @@ BP_EnemyAI_C="\"Object\" "
 Character=
 Pawn=
 EdGraphNode_Comment="\"Object\" "
-EndCinematic_C="\"Object\" "
+EndCinematic_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 GLTFProxyOptions="\"Object\" "
 WoodSeal_C="\"Object.Default.CandleIndex\" "
+LevelScriptBlueprint="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MediaPlayerEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MediaSourceEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=MediaSourceEditor
+RecentAssetEditors=MediaPlayerEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -880,12 +887,8 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=MediaPlayerEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=TextureEditor
 RecentAssetEditors=MediaPlayerEditor
-RecentAssetEditors=MediaSourceEditor
 RecentAssetEditors=MediaSourceEditor
 RecentAssetEditors=MediaSourceEditor
 RecentAssetEditors=MediaSourceEditor
@@ -894,17 +897,15 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MediaPlayerEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MediaPlayerEditor
-RecentAssetEditors=MediaPlayerEditor
 RecentAssetEditors=MediaSourceEditor
 RecentAssetEditors=MediaSourceEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MediaSourceEditor
 RecentAssetEditors=MediaSourceEditor
-RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/BluePrints/InteractableObjects/MirrorTesting.MirrorTesting
-OpenAssetsAtExit=/Game/BluePrints/MirrorSpawnSystem/WoodSeal.WoodSeal
-OpenAssetsAtExit=/Game/BluePrints/MirrorSpawnSystem/MirrorManager.MirrorManager
-OpenAssetsAtExit=/Game/BluePrints/MirrorSpawnSystem/BP_Light.BP_Light
+OpenAssetsAtExit=/Game/Movies/EndCinematic.EndCinematic
+OpenAssetsAtExit=/Game/Maps/EndingCinematic.EndingCinematic:PersistentLevel.EndingCinematic
+OpenAssetsAtExit=/Game/Movies/CreditsandEndingCine.CreditsandEndingCine
+OpenAssetsAtExit=/Game/Movies/EndCine_Video.EndCine_Video
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -3391,6 +3392,31 @@ BP_Light_C.Actor=True
 BP_Light_C.Tick=True
 BP_Light_C.WorldPartition=True
 BP_Light_C.Events=True
+EndingCinematic_C.Tick=True
+EndingCinematic_C.Replication=True
+EndingCinematic_C.Actor=True
+EndingCinematic_C.Input=True
+EndingCinematic_C.HLOD=True
+EndingCinematic_C.Physics=True
+EndingCinematic_C.WorldPartition=True
+EndingCinematic_C.Events=True
+LevelScriptBlueprint.ClassOptions=True
+LevelScriptBlueprint.BlueprintOptions=True
+LevelScriptBlueprint.Imports=True
+LevelScriptBlueprint.Interfaces=True
+EndCinematic_C.Default=True
+EndCinematic_C.Appearance=True
+EndCinematic_C.Input=True
+EndCinematic_C.Interaction=True
+EndCinematic_C.Designer=True
+EndCinematic_C.Performance=True
+EndCinematic_C.Layout=True
+EndCinematic_C.Behavior=True
+EndCinematic_C.Render Transform=True
+EndCinematic_C.Localization=True
+EndCinematic_C.Accessibility=True
+EndCinematic_C.Rendering=True
+EndCinematic_C.Navigation=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3560,7 +3586,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 
 [RootWindow]
 ScreenPosition=X=92.000 Y=0.000
-WindowSize=X=1315.200 Y=755.200
+WindowSize=X=1316.000 Y=756.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3577,7 +3603,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/hhx17/OneDrive/Desktop/gdwGameYear3/gdwGameYear3 5.3 - 2 5.3 5.3/Content/Maps
+UNR=../../../../../../Users/reidp/OneDrive/Documents/GitHub/Unreal Engine/gdwGameYear3/gdwGameYear3 5.3 - 2 5.3 5.3/Content/Maps
 BRUSH=../../../../../../Users/reidp/OneDrive/Documents/GitHub/Unreal Engine/gdwGameYear3/gdwGameYear3 5.3 - 2 5.3 5.3/Content/
 FBX=../../../../../../Users/reidp/OneDrive/Documents/GitHub/Unreal Engine/gdwGameYear3/gdwGameYear3 5.3 - 2 5.3 5.3/Content/
 FBXAnim=../../../../../../Users/reidp/OneDrive/Documents/GitHub/Unreal Engine/gdwGameYear3/gdwGameYear3 5.3 - 2 5.3 5.3/Content/
@@ -4700,56 +4726,56 @@ OpusDecoderElectra.LastCompileMethod=External
 
 [Python]
 LastDirectory=
-RecentsFiles=Z:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=Z:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Fortnite/Engine/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/EpicGames/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Unreal engine/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/Maps/Level1
-MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem2=/Game/Maps/Cinematic
-MRUItem3=/Game/Maps/EndingCinematic
+MRUItem0=/Game/Maps/EndingCinematic
+MRUItem1=/Game/Maps/Cinematic
+MRUItem2=/Game/Maps/Level1
+MRUItem3=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BluePrints/MirrorSpawnSystem/BP_Light
-MRUItem1=/Game/BluePrints/MirrorSpawnSystem/MirrorManager
-MRUItem2=/Game/BluePrints/MirrorSpawnSystem/WoodSeal
-MRUItem3=/Game/BluePrints/InteractableObjects/Flashlight/WoodenSeal
-MRUItem4=/Game/BluePrints/InteractableObjects/MirrorTesting
-MRUItem5=/Game/Movies/Ending_Cinematic_Matierl
-MRUItem6=/Game/Movies/opening_cine_Video_Mat
-MRUItem7=/Game/Movies/EndCineMat
-MRUItem8=/Game/BluePrints/InteractableObjects/BP_AtticWindow
-MRUItem9=/Game/Movies/EndCine
-MRUItem10=/Game/Movies/EndCinematic
-MRUItem11=/Game/Movies/Opening_CineWidget
-MRUItem12=/Game/Movies/EndCine_Video
-MRUItem13=/Game/UI_Menu/MenuMoving
-MRUItem14=/Game/Movies/purple1
-MRUItem15=/Game/UI_Menu/Final/opening_cine_Video
-MRUItem16=/Game/Movies/FinalTitleScreen
-MRUItem17=/Game/Movies/purpleMainScreenBackground
-MRUItem18=/Game/UI_Menu/MenuMoving_Video
-MRUItem19=/Game/UI_Menu/WB_MainMenu
-MRUItem20=/Game/UI_Menu/Final/menumoving
-MRUItem21=/Game/UI_Assets/Background/Menu_UI
-MRUItem22=/Game/UI_Assets/Background/Menu_MediaPlayer
-MRUItem23=/Game/Movies/opening_cine
-MRUItem24=/Game/Movies/OpeningCine
-MRUItem25=/Game/UI_Assets/Background/purpBackground
-MRUItem26=/Game/UI_Menu/Final/menumoving_Video
-MRUItem27=/Game/UI_Menu/menumoving1
-MRUItem28=/Game/UI_Assets/Menu1
-MRUItem29=/Game/BluePrints/InteractableObjects/BP_Hammer
+MRUItem0=/Game/Movies/EndCine
+MRUItem1=/Game/Movies/EndCine_Video
+MRUItem2=/Game/Movies/CreditsandEndingCine
+MRUItem3=/Game/Movies/EndCinematic
+MRUItem4=/Game/Movies/purple1
+MRUItem5=/Game/UI_Assets/Background/Menu_MediaPlayer
+MRUItem6=/Game/BluePrints/MirrorSpawnSystem/BP_Light
+MRUItem7=/Game/BluePrints/MirrorSpawnSystem/MirrorManager
+MRUItem8=/Game/BluePrints/MirrorSpawnSystem/WoodSeal
+MRUItem9=/Game/BluePrints/InteractableObjects/Flashlight/WoodenSeal
+MRUItem10=/Game/BluePrints/InteractableObjects/MirrorTesting
+MRUItem11=/Game/Movies/Ending_Cinematic_Matierl
+MRUItem12=/Game/Movies/opening_cine_Video_Mat
+MRUItem13=/Game/Movies/EndCineMat
+MRUItem14=/Game/BluePrints/InteractableObjects/BP_AtticWindow
+MRUItem15=/Game/Movies/Opening_CineWidget
+MRUItem16=/Game/UI_Menu/MenuMoving
+MRUItem17=/Game/UI_Menu/Final/opening_cine_Video
+MRUItem18=/Game/Movies/FinalTitleScreen
+MRUItem19=/Game/Movies/purpleMainScreenBackground
+MRUItem20=/Game/UI_Menu/MenuMoving_Video
+MRUItem21=/Game/UI_Menu/WB_MainMenu
+MRUItem22=/Game/UI_Menu/Final/menumoving
+MRUItem23=/Game/UI_Assets/Background/Menu_UI
+MRUItem24=/Game/Movies/opening_cine
+MRUItem25=/Game/Movies/OpeningCine
+MRUItem26=/Game/UI_Assets/Background/purpBackground
+MRUItem27=/Game/UI_Menu/Final/menumoving_Video
+MRUItem28=/Game/UI_Menu/menumoving1
+MRUItem29=/Game/UI_Assets/Menu1
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
 DeleteConfirmationVariable_Warning=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=AssetReimport
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -4961,6 +4987,7 @@ LastLogListing=PIE
 /Game/Movies/Ending_Cinematic_Matierl.Ending_Cinematic_Matierl=1
 /Game/BluePrints/MirrorSpawnSystem/BP_Light.BP_Light=0
 /Game/BluePrints/MirrorSpawnSystem/WoodSeal.WoodSeal=0
+/Game/Movies/CreditsandEndingCine.CreditsandEndingCine=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -5693,4 +5720,20 @@ Results=/Script/InterchangeCore.InterchangeResultsContainer'/Engine/Transient.In
 [Interchange_StackName__ReimportPipeline__PipelineClassName_InterchangeGLTFPipeline]
 bUseGLTFMaterialInstanceLibrary=False
 Results=/Script/InterchangeCore.InterchangeResultsContainer'/Engine/Transient.InterchangeResultsContainer_8'
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoSaveMaxBackups=10
+AutoSaveMethod=BackupAndRestore
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+RestoreOpenAssetTabsOnRestart=AlwaysPrompt
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
